[tool.poetry]
name = "nfe_scanner"
version = "0.1.0"
description = ""
authors = ["Jonatha Daguerre <jonatha@daguerre.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
pydash = "^5.1.0"
requests = "^2.28.1"
pydantic = "^1.9.1"
arrow = "^1.2.2"
furl = "^2.1.3"
click = "^8.1.3"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.4"
taskipy = "^1.9.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
snapshottest = "^0.6.0"

[tool.poetry.scripts]
poetry = 'nfe_scanner.core:say_hi'

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-v
--show-capture=no
"""
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["nfe_scanner"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.taskipy.tasks]
format = { cmd = "isort nfe_scanner tests && black nfe_scanner tests", help = "format with isort and black" }
lint = { cmd = "pylint nfe_scanner tests", help = "confirms code style using pylint" }
test = { cmd = "pytest", help = "runs all unit tests" }
"test:cov" = { cmd = "pytest --cov", help = "runs all unit tests" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
